Fix: Bg img not showing up.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url("bg4.gif");
+	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url("https://i.pinimg.com/originals/f3/85/36/f38536a326281986a9fe7762b7589f99.gif");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
